2002-04-09  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * doc/userguide/userguide.xml: fixed a link reference that fails with
      --disable-drafts

2002-04-10 Andreas Fink <andreas@fink.org>
    * doc/userguide/userguide.xml: corrected a typo. Added section about DLR

2002-04-09  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * gw/smsc_smpp.c, doc/userguide/userguide.xml: Added my-number to SMPP
    * doc/userguide/userguide.xml: changed at2 my-number description
    * gw/smsbox.c, gw/urltrans.[ch]: Added preliminary XML Post to smsbox.
    * Makefile.in: when building ps from xml, only echo "check log" if 
      jadetex fail, cleaning "make -s"
    * Makefile.in, configure.in, configure : added --enable-drafts to 
      enable/disable draft blocks being included in documentation
    * doc/userguide/userguide.xml: added draft conditional includes, 
      defined with --enable-drafts to be able to write text without being 
      displayed on snapshot documentation until it's almost final

2002-04-08 Andreas Fink <andreasgfink.org>
    * gw/dlr.c: fixed mysql_close issue pointed
      out by "Dima Milentiev" <Dima@m-wise.com>
      partially fixed a mysql problem when multiple
      messages where sent using the same timestamp

2002-04-06  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * test/.cvsignore: sorry, two last lines got concatenated
    * doc/userguide/userguide.xml: moved "account" information from 
      send-smsuser group to send-sms cgi variables

2002-04-06  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * test/.cvsignore: added test_xmlrpc to cvsignore

2002-04-06  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * gw/smsc_emi2.c: Fixed (I hope) a bug when smsc disconnects us and
      kannel tries to connect to primary and alternate smsc (it's hard to
      duplicate the error)
    * gw/urltrans.c: some identation cleaning

2002-04-04  Stipe Tolj  <tolj@wapme-systems.de>
    * test/test_xmlrpc.c: fixed some memory leaks
